added new image

--- a/index.html
+++ b/index.html
@@ -131,7 +131,10 @@
 				</div>
 			</div>
 			<div class="open">
-				<img src="./images/icon-hambuger.svg" alt="icon-hamburger image" />
+				<img
+					id="openNav"
+					src="./images/icon-hambuger.svg"
+					alt="icon-hamburger image" />
 			</div>
 		</header>
 		<div class="container">
@@ -494,7 +497,7 @@
 								</li>
 								<li>
 									<a href="mailto:olayemiabaz@gmail.com" target="_blank">
-										<i class="fa fa-gmail"></i>
+										<i class="fa fa-email"></i>
 									</a>
 								</li>
 								<li>
@@ -505,9 +508,7 @@
 									</a>
 								</li>
 								<li>
-									<a
-										href="https://wa.me/message/ZZIQ6AVH74DBA1"
-										target="_blank">
+									<a href="" target="_blank">
 										<i class="fa fa-youtube-square"></i>
 									</a>
 								</li>
