--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 								</li>
 								<li>
 									<a href="mailto:olayemiabaz@gmail.com" target="_blank">
-										<i class="fa fa-email"></i>
+										<i class="fa fa-message"></i>
 									</a>
 								</li>
 								<li>
@@ -508,7 +508,9 @@
 									</a>
 								</li>
 								<li>
-									<a href="" target="_blank">
+									<a
+										href="https://www.youtube.com/channel/UCCDv8OlNbM3Q6rKfegisjkw"
+										target="_blank">
 										<i class="fa fa-youtube-square"></i>
 									</a>
 								</li>
