--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 						<div class="btns">
 							<button class="talk_btn">
 								<a
-									href="./Abass_muhammed.pdf"
-									download="./Abass_muhammed.pdf"
+									href="./Abass_muhammed .pdf"
+									download="Abass_Muhammed_Resume"
 									class="download hire_btn"
 									>Download Resume<i class="fa fa-download"></i>
 								</a>
@@ -304,6 +304,50 @@
 									</div>
 								</div>
 								<p class="description">Landing page for a construction site</p>
+							</div>
+						</div>
+						<div class="projects">
+							<div class="projects_id">
+								<div class="project">
+									<img src="./images/space_Tourism.png" alt="space_Tourism" />
+									<div class="overlap">
+										<div class="overlap_content">
+											<a
+												href="https://space-tourism-webapp-omega.vercel.app/"
+												target="_blank">
+												<i class="fa fa-globe"> Live</i>
+											</a>
+											<a
+												href="https://github.com/Maarcbaz/Space-tourism.git"
+												target="_blank">
+												<i class="fa fa-code"> Code </i>
+											</a>
+										</div>
+									</div>
+								</div>
+								<p class="description">Space Tourism webApp</p>
+							</div>
+						</div>
+						<div class="projects">
+							<div class="projects_id">
+								<div class="project">
+									<img src="./images/product_page.png" alt="product_page" />
+									<div class="overlap">
+										<div class="overlap_content black">
+											<a
+												href="https://product-page-one-snowy.vercel.app/"
+												target="_blank">
+												<i class="fa fa-globe"> Live</i>
+											</a>
+											<a
+												href="https://github.com/Maarcbaz/Product_page.git"
+												target="_blank">
+												<i class="fa fa-code"> Code </i>
+											</a>
+										</div>
+									</div>
+								</div>
+								<p class="description">A product Laptop stand landing page</p>
 							</div>
 						</div>
 						<div class="projects">
