--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 										</div>
 									</div>
 								</div>
-								<p class="description">A product Laptop stand landing page</p>
+								<p class="description">A product landing page</p>
 							</div>
 						</div>
 						<div class="projects">
