--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 							<div class="technology">
 								<div class="course">
 									<p>HTML</p>
-									<p>Advanced</p>
+									<p>Advance</p>
 								</div>
 								<div class="th_c">
 									<div class="th_layer_high"></div>
@@ -202,7 +202,7 @@
 							<div class="technology">
 								<div class="course">
 									<p>CSS</p>
-									<p>Advanced</p>
+									<p>Advance</p>
 								</div>
 								<div class="th_c">
 									<div class="th_layer_high"></div>
@@ -211,10 +211,10 @@
 							<div class="technology">
 								<div class="course">
 									<p>Javascript [ES6]</p>
-									<p>Intermediate</p>
+									<p>Advance</p>
 								</div>
 								<div class="th_c">
-									<div class="th_layer_inter"></div>
+									<div class="th_layer_high"></div>
 								</div>
 							</div>
 							<div class="technology">
@@ -229,24 +229,24 @@
 							<div class="technology">
 								<div class="course">
 									<p>React</p>
-									<p>Beginner</p>
+									<p>Intermediate</p>
 								</div>
 								<div class="th_c">
-									<div class="th_layer_beginner"></div>
-								</div>
-							</div>
-							<div class="technology">
-								<div class="course">
-									<p>TypeScript, JQuery</p>
-									<p>Beginner</p>
-								</div>
-								<div class="th_c">
-									<div class="th_layer_beginner"></div>
+									<div class="th_layer_inter"></div>
 								</div>
 							</div>
 							<div class="technology">
 								<div class="course">
 									<p>Python</p>
+									<p>Intermediate</p>
+								</div>
+								<div class="th_c">
+									<div class="th_layer_inter"></div>
+								</div>
+							</div>
+							<div class="technology">
+								<div class="course">
+									<p>TypeScript, JQuery</p>
 									<p>Beginner</p>
 								</div>
 								<div class="th_c">
