--- a/index.html
+++ b/index.html
@@ -277,45 +277,137 @@
 							<div class="projects">
 								<div class="projects_id">
 									<div class="project">
-										<img src="./images/sneakers.png" alt="sneakers page" />
+										<img src="./images/noteapp.png" alt="noteappage" />
 										<div class="overlap">
 											<div class="overlap_content black">
 												<a
-													href="https://sneakers-pi-six.vercel.app/"
+													href="https://noteapp-bice.vercel.app/"
 													target="_blank">
 													<i class="fa fa-globe"> Live</i>
 												</a>
 												<a
-													href="https://github.com/Maarcbaz/sneakers.git"
+													href=https://github.com/Maarcbaz/NoteApp"
 													target="_blank">
 													<i class="fa fa-code"> Code </i>
 												</a>
 											</div>
 										</div>
 									</div>
-									<p class="description">Sneakers webpage</p>
+									<p class="description">Note App</p>
 								</div>
 							</div>
 							<div class="projects">
 								<div class="projects_id">
 									<div class="project">
-										<img src="./images/TodoApp.png" alt="netflix_image page" />
+										<img src="./images/recipeapp.png" alt="recipe app" />
 										<div class="overlap">
-											<div class="overlap_content">
+											<div class="overlap_content black">
 												<a
-													href="https://todo-app-ten-rust.vercel.app/"
+													href="https://recipe-app-dun-nine.vercel.app/"
 													target="_blank">
 													<i class="fa fa-globe"> Live</i>
 												</a>
 												<a
-													href="https://github.com/Maarcbaz/TodoApp.git"
+													href="https://github.com/Maarcbaz/recipeApp"
 													target="_blank">
 													<i class="fa fa-code"> Code </i>
 												</a>
 											</div>
 										</div>
 									</div>
-									<p class="description">Todo App</p>
+									<p class="description">Recipe app</p>
+								</div>
+							</div>
+							<div class="projects">
+								<div class="projects_id">
+									<div class="project">
+										<img src="./images/space_Tourism.png" alt="space_Tourism" />
+										<div class="overlap">
+											<div class="overlap_content">
+												<a
+													href="https://space-tourism-webapp-omega.vercel.app/"
+													target="_blank">
+													<i class="fa fa-globe"> Live</i>
+												</a>
+												<a
+													href="https://github.com/Maarcbaz/Space-tourism.git"
+													target="_blank">
+													<i class="fa fa-code"> Code </i>
+												</a>
+											</div>
+										</div>
+									</div>
+									<p class="description">Space Tourism webApp</p>
+								</div>
+							</div>
+							<div class="projects">
+								<div class="projects_id">
+									<div class="project">
+										<img src="./images/product_page.png" alt="product_page" />
+										<div class="overlap">
+											<div class="overlap_content black">
+												<a
+													href="https://product-page-one-snowy.vercel.app/"
+													target="_blank">
+													<i class="fa fa-globe"> Live</i>
+												</a>
+												<a
+													href="https://github.com/Maarcbaz/Product_page.git"
+													target="_blank">
+													<i class="fa fa-code"> Code </i>
+												</a>
+											</div>
+										</div>
+									</div>
+									<p class="description">A product landing page</p>
+								</div>
+							</div>
+							<div class="projects">
+								<div class="projects_id">
+									<div class="project">
+										<img
+											src="./images/Nike_landing_Page.png"
+											alt="Nike page" />
+										<div class="overlap">
+											<div class="overlap_content black">
+												<a
+													href="nike-two-sandy.vercel.app"
+													target="_blank">
+													<i class="fa fa-globe"> Live</i>
+												</a>
+												<a
+													href="https://github.com/Maarcbaz/Nike"
+													target="_blank">
+													<i class="fa fa-code"> Code </i>
+												</a>
+											</div>
+										</div>
+									</div>
+									<p class="description">Nike landing webpage</p>
+								</div>
+							</div>
+							<div class="projects">
+								<div class="projects_id">
+									<div class="project">
+										<img
+											src="./images/hoobank.png"
+											alt="hoobank page" />
+										<div class="overlap">
+											<div class="overlap_content">
+												<a
+													href="https://hoobank-neon-tau.vercel.app/"
+													target="_blank">
+													<i class="fa fa-globe"> Live</i>
+												</a>
+												<a
+													href=""
+													target="_blank">
+													<i class="fa fa-code"> Code </i>
+												</a>
+											</div>
+										</div>
+									</div>
+									<p class="description">Hoobank landing page</p>
 								</div>
 							</div>
 							<div class="projects">
@@ -366,97 +458,6 @@
 									<p class="description">
 										Landing page for a construction site
 									</p>
-								</div>
-							</div>
-							<div class="projects">
-								<div class="projects_id">
-									<div class="project">
-										<img src="./images/space_Tourism.png" alt="space_Tourism" />
-										<div class="overlap">
-											<div class="overlap_content">
-												<a
-													href="https://space-tourism-webapp-omega.vercel.app/"
-													target="_blank">
-													<i class="fa fa-globe"> Live</i>
-												</a>
-												<a
-													href="https://github.com/Maarcbaz/Space-tourism.git"
-													target="_blank">
-													<i class="fa fa-code"> Code </i>
-												</a>
-											</div>
-										</div>
-									</div>
-									<p class="description">Space Tourism webApp</p>
-								</div>
-							</div>
-							<div class="projects">
-								<div class="projects_id">
-									<div class="project">
-										<img src="./images/product_page.png" alt="product_page" />
-										<div class="overlap">
-											<div class="overlap_content black">
-												<a
-													href="https://product-page-one-snowy.vercel.app/"
-													target="_blank">
-													<i class="fa fa-globe"> Live</i>
-												</a>
-												<a
-													href="https://github.com/Maarcbaz/Product_page.git"
-													target="_blank">
-													<i class="fa fa-code"> Code </i>
-												</a>
-											</div>
-										</div>
-									</div>
-									<p class="description">A product landing page</p>
-								</div>
-							</div>
-							<div class="projects">
-								<div class="projects_id">
-									<div class="project">
-										<img src="./images/flyo.png" alt="netflix_image page" />
-										<div class="overlap">
-											<div class="overlap_content">
-												<a
-													href="https://maarcbaz-flyo-page.vercel.app/"
-													target="_blank">
-													<i class="fa fa-globe"> Live</i>
-												</a>
-												<a
-													href="https://github.com/Maarcbaz/flyo-landing-page.git"
-													target="_blank">
-													<i class="fa fa-code"> Code </i>
-												</a>
-											</div>
-										</div>
-									
-									</div>
-									<p class="description">Flyo landing Webpage</p>
-								</div>
-							</div>
-							<div class="projects">
-								<div class="projects_id">
-									<div class="project">
-										<img
-											src="./images/loopstudios.png"
-											alt="netflix_image page" />
-										<div class="overlap">
-											<div class="overlap_content">
-												<a
-													href="https://maarcbaz-loopstudios-page.vercel.app/"
-													target="_blank">
-													<i class="fa fa-globe"> Live</i>
-												</a>
-												<a
-													href="https://github.com/Maarcbaz/Loopstudio-page.git"
-													target="_blank">
-													<i class="fa fa-code"> Code </i>
-												</a>
-											</div>
-										</div>
-									</div>
-									<p class="description">Loopstudios Webpage</p>
 								</div>
 							</div>
 							<div class="projects">
