resolve issue with Nike

--- a/index.html
+++ b/index.html
@@ -343,6 +343,30 @@
 							<div class="projects">
 								<div class="projects_id">
 									<div class="project">
+										<img
+											src="./images/Nike_landing_Page.png"
+											alt="Nike page" />
+										<div class="overlap">
+											<div class="overlap_content black">
+												<a
+													href="https://nike-two-sandy.vercel.app/"
+													target="_blank">
+													<i class="fa fa-globe"> Live</i>
+												</a>
+												<a
+													href="https://github.com/Maarcbaz/Nike"
+													target="_blank">
+													<i class="fa fa-code"> Code </i>
+												</a>
+											</div>
+										</div>
+									</div>
+									<p class="description">Nike landing webpage</p>
+								</div>
+							</div>
+							<div class="projects">
+								<div class="projects_id">
+									<div class="project">
 										<img src="./images/product_page.png" alt="product_page" />
 										<div class="overlap">
 											<div class="overlap_content black">
@@ -360,30 +384,6 @@
 										</div>
 									</div>
 									<p class="description">A product landing page</p>
-								</div>
-							</div>
-							<div class="projects">
-								<div class="projects_id">
-									<div class="project">
-										<img
-											src="./images/Nike_landing_Page.png"
-											alt="Nike page" />
-										<div class="overlap">
-											<div class="overlap_content black">
-												<a
-													href="nike-two-sandy.vercel.app"
-													target="_blank">
-													<i class="fa fa-globe"> Live</i>
-												</a>
-												<a
-													href="https://github.com/Maarcbaz/Nike"
-													target="_blank">
-													<i class="fa fa-code"> Code </i>
-												</a>
-											</div>
-										</div>
-									</div>
-									<p class="description">Nike landing webpage</p>
 								</div>
 							</div>
 							<div class="projects">
